# ai_agent_prescription

./: .gitignore  README.md  pyproject.toml  requirements1.txt  test.py
src/crew_email_automation_chat/: crew.py  main.py
src/crew_email_automation_chat/config/: agents.yaml  tasks.yaml
src/crew_email_automation_chat/tools/: Full_patient_data.json  custom_tool.py  validation_records.pkl
