[project]
name = "crew_email_automation_chat"
version = "0.1.0"
description = "crew_email_automation_chat using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
crew_email_automation_chat = "crew_email_automation_chat.main:run"
run_crew = "crew_email_automation_chat.main:run"
train = "crew_email_automation_chat.main:train"
replay = "crew_email_automation_chat.main:replay"
test = "crew_email_automation_chat.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
